# recall

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: PLAN.md  guide.md
src/: config.rs  lib.rs  main.rs  note.rs  storage.rs  tui.rs
