[package]
name = "recall-rs"
version = "0.1.0"
edition = "2024"
description = "A minimalistic CLI tool for note taking and recall."
license = "MIT"
repository = "https://github.com/jojonv/recall"
readme = "README.md"
keywords = ["cli", "notes", "recall", "tui"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.27.0"
